--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "rbrowser"
+name = "rdbrowser"
 version = "0.1.0"
 authors = ["f-squirrel <dmitry.b.danilov@gmail.com>"]
 edition = "2018"
@@ -7,3 +7,5 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clap = "~2.33.3"
+rocksdb = "0.15.0"
