--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
 name = "rdbrowser"
 version = "0.1.0"
-authors = ["f-squirrel <dmitry.b.danilov@gmail.com>"]
+authors = ["Dmitry Danilov <dmitry.b.danilov@gmail.com>"]
+repository = "https://github.com/f-squirrel/rdbrowser"
+homepage = "https://github.com/f-squirrel/rdbrowser"
+description = "CLI Browser for RocksDB"
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
