--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ edition = "2018"
 clap = "~2.33.3"
 rocksdb = "0.15.0"
 hex = "0.4.2"
+simple-error = "0.2"
 
 [dev-dependencies]
 assert_cmd = "1.0.3"
